[package]
name = "x86_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_x86 = { workspace = true }

[workspace]
members = [
    ".",
    # inner_libs
    # all inner crates are prefixed lib_<x> so that they are sorted above /src and /target in my ide
    # and for literally no other reason
    "src/lib_x86",
    "src/lib_x86/lib_types",
    "src/lib_x86/lib_utils",
    "src/lib_x86/lib_opcode",
    "src/lib_x86/lib_intrinsics",
    "./tests"
]

[workspace.dependencies]
lib_x86 = { path = "src/lib_x86", version = "0.1.0" }
lib_types = { path = "src/lib_x86/lib_types", version = "0.1.0" }
lib_utils = { path = "src/lib_x86/lib_utils", version = "0.1.0" }
lib_opcode = { path = "src/lib_x86/lib_opcode", version = "0.1.0" }
lib_instrinsics = { path = "src/lib_x86/lib_intrinsics", version = "0.1.0" }



#profile for tests has optimisations to make sure the thing actually runs decently quickly
[profile.test]
opt-level = 3
codegen-units = 1
lto = "fat"

[features]
default = []
safety_checks = ["lib_x86/safety_checks"]
