[package]
name = "tests"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/tests.rs"

[dependencies]

# project crates
lib_x86 = { workspace = true }
lib_types = { workspace = true }


# 3rd party dependencies for testing
rand = "0.9.0"


[features]
default = []
safety_checks = ["lib_x86/safety_checks", "lib_types/safety_checks"]